tests/elab/recconstructorcrash.lean
/-- error: (kernel) constant has already been declared 'X.rec' -/
#guard_msgs in
inductive X where
  | rec
